--- a/argocd/backend-pr-env-applicationset.yaml
+++ b/argocd/backend-pr-env-applicationset.yaml
@@ -14,6 +14,12 @@ spec:
       namespace: argocd
       finalizers:
         - resources-finalizer.argocd.argoproj.io
+      annotations:
+        argocd-image-updater.argoproj.io/image-list: app=katainaka0503/grpc-pr-env-test-backend
+        argocd-image-updater.argoproj.io/app.update-strategy: latest
+        argocd-image-updater.argoproj.io/app.force-update: "true"
+        argocd-image-updater.argoproj.io/app.allow-tags: regexp:{{branch}}-.*
+        argocd-image-updater.argoproj.io/write-back-method: argocd
     spec:
       project: default
       source:
