--- a/argocd/frontend-pr-env-applicationset.yaml
+++ b/argocd/frontend-pr-env-applicationset.yaml
@@ -27,7 +27,7 @@ spec:
         path: manifests/frontend/overlays/pr
         targetRevision: master
         kustomize:
-          namePrefix: {{branch}}-
+          namePrefix: '{{branch}}-'
       destination:
         server: "https://kubernetes.default.svc"
         namespace: default
