--- a/manifests/backend/overlays/staging/httproute.yaml
+++ b/manifests/backend/overlays/staging/httproute.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: mesh
+  name: backend
 spec:
   parentRefs:
     - kind: Mesh
