--- a/manifests/backend/overlays/staging/httproute.yaml
+++ b/manifests/backend/overlays/staging/httproute.yaml
@@ -1,4 +1,4 @@
-apiVersion: gateway.networking.k8s.io/v1beta1
+apiVersion: gateway.networking.k8s.io/v1alpha2
 kind: HTTPRoute
 metadata:
   name: backend
@@ -8,6 +8,6 @@ spec:
       name: istio
   hostnames: ["backend.default.svc.cluster.local"]
   rules:
-  - backendRefs:
-      - name: backend
-        port: 80
+    - backendRefs:
+        - name: backend
+          port: 80
