--- a/argocd/frontend-pr-env-routing-applicationset.yaml
+++ b/argocd/frontend-pr-env-routing-applicationset.yaml
@@ -1,7 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: frontend-pr-env
+  name: frontend-pr-env-routing
+  namespace: argocd
 spec:
   generators:
   - pullRequest:
@@ -10,7 +11,7 @@ spec:
         repo: grpc-pr-env-test-frontend
   template:
     metadata:
-      name: frontend
+      name: '{{branch}}-frontend-routing'
       namespace: argocd
       finalizers:
         - resources-finalizer.argocd.argoproj.io
