--- a/argocd/backend-application.yaml
+++ b/argocd/backend-application.yaml
@@ -9,7 +9,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: app=katainaka0503/grpc-pr-env-test-backend
     argocd-image-updater.argoproj.io/app.update-strategy: latest
     argocd-image-updater.argoproj.io/app.force-update: "true"
-    argocd-image-updater.argoproj.io/app.allow-tags: regexp:main-.*
+    argocd-image-updater.argoproj.io/app.allow-tags: regexp:master-.*
     argocd-image-updater.argoproj.io/write-back-method: argocd
 spec:
   project: default
