--- a/argocd/frontend-pr-env-routing-applicationset.yaml
+++ b/argocd/frontend-pr-env-routing-applicationset.yaml
@@ -27,7 +27,7 @@ spec:
             - name: branch
               value: '{{ branch }}'
             - name: app
-              value: 
+              value: frontend
       destination:
         server: "https://kubernetes.default.svc"
         namespace: default
