--- a/argocd/backend-pr-env-applicationset.yaml
+++ b/argocd/backend-pr-env-applicationset.yaml
@@ -20,7 +20,7 @@ spec:
         argocd-image-updater.argoproj.io/app.update-strategy: latest
         argocd-image-updater.argoproj.io/app.force-update: "true"
         argocd-image-updater.argoproj.io/app.allow-tags: regexp:{{branch}}-.*
-        argocd-image-updater.argoproj.io/write-back-method: argocd
+        argocd-image-updater.argoproj.io/write-back-method: git
     spec:
       project: default
       source:
