--- a/argocd/backend-pr-env-applicationset.yaml
+++ b/argocd/backend-pr-env-applicationset.yaml
@@ -29,6 +29,8 @@ spec:
         targetRevision: master
         kustomize:
           namePrefix: '{{branch}}-'
+          commonLabels:
+            branch: '{{branch}}'
       destination:
         server: "https://kubernetes.default.svc"
         namespace: default
